<resources>
    <string-array name="game_type">
        <item>Test Your Memory</item>
        <item>Test Your Reflex</item>
    </string-array>
    <!--    for navigation arguments-->
    <string name="nav_arg_to_pie_int" translatable="false">nav_arg_to_pie_int</string>
    <string name="nav_arg_to_pie_string" translatable="false">nav_arg_to_pie_string</string>

    <string name="nav_arg_to_oreo_int" translatable="false">nav_arg_to_oreo_int</string>
    <string name="nav_arg_to_oreo_string" translatable="false">nav_arg_to_oreo_string</string>

    <string name="nav_arg_to_nougat_int" translatable="false">nav_arg_to_nougat_int</string>
    <string name="nav_arg_to_nougat_string" translatable="false">nav_arg_to_nougat_string</string>

    <string name="app_name">t4tek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="level">LEVEL</string>
    <string name="_600">/600</string>
    <string name="select_game_type">Select game type</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="challenge_mode">Challenge Mode</string>
    <string name="game_number">GAME \n NUMBER:</string>
    <string name="best_time">BEST TIME</string>
    <string name="result">RESULT</string>
    <string name="Gnumber">GAME NUMBER:</string>
    <string name="best_result">Best Result:</string>
    <string name="view_you_answer">View you answer</string>
    <string name="play">Play</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">Del</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>

    <string-array name="number">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
    </string-array>

</resources>